#71 프로젝트 관리 api-2

--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -171,7 +171,7 @@
                                 <div class="form-group">
                                     <div style="color: red;font-weight: bold; font-size: small">
                                         {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
-                                        : 직급, {{targer_orgarnize}} : 조직, {{targer_phone}} : 훈련 대상자의 전화번호
+                                        : 직급, {{target_orgarnize}} : 조직, {{target_phone}} : 훈련 대상자의 전화번호
                                     </div>
                                 </div>
                                 <div class="form-group w-50">
