#71 버그 수정작업 - 1

--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -110,7 +110,7 @@
                     <div class="pgn-modal" id="my_modal">
                         <div class="pgn-modal-wrapper ">
                             <div class="modal__header">
-                                <h5>템플릿 수정</h5>
+                                <h5>템플릿 관리</h5>
                                 <div class="toolbox">
                                     <button class="btn-modal-close modal-dismiss" onclick="closeModal()"><i
                                             class="la la-times"></i></button>
