#71 버그 수정작업 - 2

--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -133,9 +133,10 @@
                             </div>
                             <div class="modal__body">
                                 <div class="form-group w-50">
-                                    <label for="tmp_division">구분</label><select id="tmp_division">
-                                    <option value="1" selected>기본</option>
-                                    <option value="2">사용자</option>
+                                    <label for="tmp_division">구분</label>
+                                    <select id="tmp_division">
+                                        <option value="1" disabled>기본</option>
+                                        <option value="2" selected>사용자</option>
                                 </select>
                                 </div>
 
