--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -389,14 +389,20 @@
         r.onreadystatechange = function () {
             if (r.readyState === 4) {
                 if (r.status === 200) {
-                    alert("템플릿 수정 완료했습니다.")
-                    location.reload()
+                    alert("템플릿 수정 완료했습니다.");
+                    location.reload();
+                } else if (r.status === 400) {
+                    alert("해당 템플릿의 이름이 중복되었거나 형식이 올바르지 않습니다. \n(특수문자 사용불가)");
+                } else if (r.status === 402) {
+                    alert("사용자 템플릿은 최대 10개까지만 등록이 가능합니다.");
                 } else if (r.status === 403) {
                     const tokenResult = Refresh();
                     if (tokenResult) {
                         editTml();
                         console.log("true")
                     }
+                } else if (r.status === 500) {
+                    alert("서버에러");
                 }
             }
         };
