#110 | fileupload 동기 처리

--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -186,7 +186,7 @@
                                 </script>
                                 <div class="form-group">
                                     <div style="color: red;font-weight: bold; font-size: small">
-                                        {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : 악성메일 훈련 솔루션 IP, {{target_position}}
+                                        {{target_name}} : 훈련 대상자의 이름, {{count_ip}} : email 열람 시 count, {{link_ip}} : link 클릭 시 count {{download_ip}} : download 파일 실행 시 count, {{target_position}}
                                         : 직급, {{target_orgarnize}} : 조직, {{target_phone}} : 훈련 대상자의 전화번호
                                     </div>
                                 </div>
