#122 버그 수정 & 카프카 프로세스 분리

--- a/ui/html/templates/template.html
+++ b/ui/html/templates/template.html
@@ -169,7 +169,8 @@
                                     <label for="sender_name">발송자명</label>
                                     <input type="text"
                                            id="sender_name"
-                                           maxlength="30">
+                                           maxlength="30"
+                                           disabled="disabled">
                                 </div>
                                 <!-- <label>발송자</label> -->
 
