--- a/ui/html/public/css/sport.css
+++ b/ui/html/public/css/sport.css
@@ -2115,7 +2115,8 @@ li {
         flex-direction: column;
         width: 100%; }
         .tab.vertical > .tab-header .tab__navigation .tab__nav-item {
-          padding: auto 5px;
+          /*padding: auto 5px;*/
+          padding: 5px;
           width: 100%;
           background: white; }
           .tab.vertical > .tab-header .tab__navigation .tab__nav-item:first-child {
@@ -2342,4 +2343,47 @@ table {
   box-shadow: none!important;
   font-weight:bold;
   color:#b13deb;
+}
+
+.login-container-wrapper {
+  display: flex;
+  flex-wrap: nowrap;
+  height: 100%;
+  width: 100%; }
+.login-container {
+  flex: 1;
+  display: flex;
+  flex-wrap: nowrap;
+  margin-top: 3%;
+  margin-right: 15%;
+  justify-content: flex-end;
+  align-items: center; }
+
+.login_container-form {
+  border-left-color: transparent;
+  position: relative;
+  /*overflow: hidden;*/
+  width: 100%;
+  height: fit-content;
+  padding-right: 15px;
+  padding-left: 15px;
+  flex: 0 0 25%;
+  flex-grow: 0;
+  flex-shrink: 0;
+  flex-basis: 25%;
+  max-width: 30%;
+  max-height: 90%;
+  margin-top: 10%;
+  margin-bottom: 13%;
+}
+
+#box {
+  margin: 1rem 0;
+  background: white;
+  border-radius: 4px;
+  padding: 15px 15px 15px 15px;
+  box-shadow: 0 0 5px 1px rgba(45, 43, 54, 0.04);
+  /*min-height: 50%;*/
+  min-width: 50%;
+  max-height: 60%;
 }
